@@ -33,6 +33,7 @@ Enhancements::
 * convert string with non-ASCII characters to NFD when applying smallcaps transformation to support diacritics (#2485)
 * add single up and down arrow to built-in fonts (fonts used by default themes) (#2586)
 * implement support for extent attribute (container|margin|page) on tables (#1415)
+* allow list marker on bibliography list to be customized using ulist_marker_biblio theme category (#2407)
 
 Improvements::
 
